2004-01-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Fix a crasher where list_view was not set to NULL
	at the right time. Bug #132047.

2003-11-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (CLEANFILES): Clean up the schema data after
	ourselves.

2003-11-19  Callum McKenzie  <callum@ou030243.otago.ac.nz>

	* help/Makefile.am (SUBDIRS): Disabled the da, es and it
	translations until I can get them better integrated into the build
	process (xml, not html is now expected).

2003-11-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/it/Makefile.am: 
	* help/da/Makefile.am:
	* help/es/Makefile.am: Updated to let make uninstall work.

2003-10-30  Callum McKenzie  <callum@localhost.localdomain>

	* Makefile.am (INCLUDES): Removed *_DISABLE_DEPRECATED.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are
	installed. This should improve things for people building outside
	the source tree. See bug #123192.

2003-10-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c: 
	* properties.c: 
	* properties.h: Replaced deprecated gtk+ functions.

2003-10-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c
	* gnobots.c: Explicitly call cleanup_game in the exit_cb code to
	avoid a race condition where the window gets destroyed and then
	the animation timer goes off before the game exits. Fun with bad
	window references occur. This fixes bug #123488.

2003-08-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* graphics.c: 
	* properties.c: GConf return value checks.

2003-08-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnobots.c (main): 
	* gameconfig.c (load_game_configs): Handle the case where we find
	no configuration files to load. This fixes bug #112059.

2003-07-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnobots2.xml: Updated for 2.4, including the screenshot.
