@@ -1,3 +1,13 @@
+2004-02-07  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* properties.c: Set the keypad to be the standard set of
+	keys. "Use Standard Robots Keys" has been renamed "Use Original
+	Robots Keys". Reversed the key labels appropriately. Also
+	capitalisation fixes as per HIG.
+
+	* gnobots2.schemas.in: Added schemas for all the keys and set the
+	default to be the numeric keypad.
+
 2004-01-31  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* properties.c: Fix a crasher where list_view was not set to NULL
